refactor: 꿀조합 랭킹 API 수정 (#38)
* refactor: 비로그인 시에도 LoginInfo 반환하도록 수정

* refactor: 꿀조합 랭킹 API 로직 및 dto 수정

* test: 꿀조합 랭킹 통합 테스트 수정

* test: 꿀조합 랭킹 서비스 테스트 수정

* test: 로그인 여부에 대한 꿀조합 랭킹 서비스 테스트 추가

* test: 꿀조합 랭킹 점수에 대한 서비스 테스트 수정

* refactor: 꿀조합 랭킹 dto 필드명 수정

* refactor: RankingRecipeDto의 author 타입 롤백

* refactor: 꿀조합 랭킹 서비스 테스트 이름 수정

* refactor: 로그인 여부에 따른 꿀조합 랭킹 인수 테스트 분리