@@ -17,6 +17,7 @@ import static com.funeat.fixture.ProductFixture.상품_삼각김밥_가격2000�
 import static com.funeat.fixture.ProductFixture.상품_삼각김밥_가격2000원_평점3점_생성;
 import static com.funeat.fixture.ProductFixture.상품_삼각김밥_가격3000원_평점4점_생성;
 import static com.funeat.fixture.RecipeFixture.레시피_생성;
+import static com.funeat.fixture.RecipeFixture.레시피_좋아요_생성;
 import static com.funeat.fixture.RecipeFixture.레시피이미지_생성;
 import static com.funeat.fixture.RecipeFixture.레시피좋아요요청_생성;
 import static com.funeat.fixture.RecipeFixture.레시피추가요청_생성;
@@ -556,7 +557,7 @@ class RecipeServiceTest extends ServiceTest {
     }
 
     @Nested
-    class getTop3Recipes_성공_테스트 {
+    class getTop4Recipes_성공_테스트 {
 
         @Nested
         class 꿀조합_개수에_대한_테스트 {
@@ -564,10 +565,11 @@ class RecipeServiceTest extends ServiceTest {
             @Test
             void 전체_꿀조합이_하나도_없어도_반환값은_있어야한다() {
                 // given
+                final var loginId = -1L;
                 final var expected = RankingRecipesResponse.toResponse(Collections.emptyList());
 
                 // when
-                final var actual = recipeService.getTop3Recipes();
+                final var actual = recipeService.getTop4Recipes(loginId);
 
                 // then
                 assertThat(actual).usingRecursiveComparison()
@@ -577,6 +579,7 @@ class RecipeServiceTest extends ServiceTest {
             @Test
             void 랭킹_조건에_부합하는_꿀조합이_1개면_꿀조합이_1개_반환된다() {
                 // given
+                final var loginId = -1L;
                 final var member = 멤버_멤버1_생성();
                 단일_멤버_저장(member);
 
@@ -585,12 +588,12 @@ class RecipeServiceTest extends ServiceTest {
                 단일_꿀조합_저장(recipe);
 
                 final var author = RecipeAuthorDto.toDto(member);
-                final var rankingRecipeDto = RankingRecipeDto.toDto(recipe, Collections.emptyList(), author);
+                final var rankingRecipeDto = RankingRecipeDto.toDto(recipe, Collections.emptyList(), author, false);
                 final var rankingRecipesDtos = Collections.singletonList(rankingRecipeDto);
                 final var expected = RankingRecipesResponse.toResponse(rankingRecipesDtos);
 
                 // when
-                final var actual = recipeService.getTop3Recipes();
+                final var actual = recipeService.getTop4Recipes(loginId);
 
                 // then
                 assertThat(actual).usingRecursiveComparison()
@@ -600,6 +603,7 @@ class RecipeServiceTest extends ServiceTest {
             @Test
             void 랭킹_조건에_부합하는_꿀조합이_2개면_꿀조합이_2개_반환된다() {
                 // given
+                final var loginId = -1L;
                 final var member = 멤버_멤버1_생성();
                 단일_멤버_저장(member);
 
@@ -609,13 +613,13 @@ class RecipeServiceTest extends ServiceTest {
                 복수_꿀조합_저장(recipe1, recipe2);
 
                 final var author = RecipeAuthorDto.toDto(member);
-                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author);
-                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author);
+                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author, false);
+                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author, false);
                 final var rankingRecipesDtos = List.of(rankingRecipeDto2, rankingRecipeDto1);
                 final var expected = RankingRecipesResponse.toResponse(rankingRecipesDtos);
 
                 // when
-                final var actual = recipeService.getTop3Recipes();
+                final var actual = recipeService.getTop4Recipes(loginId);
 
                 // then
                 assertThat(actual).usingRecursiveComparison()
@@ -623,8 +627,37 @@ class RecipeServiceTest extends ServiceTest {
             }
 
             @Test
-            void 전체_꿀조합_중_랭킹이_높은_상위_3개_꿀조합을_구할_수_있다() {
+            void 랭킹_조건에_부합하는_꿀조합이_3개면_꿀조합이_3개_반환된다() {
                 // given
+                final var loginId = -1L;
+                final var member = 멤버_멤버1_생성();
+                단일_멤버_저장(member);
+
+                final var now = LocalDateTime.now();
+                final var recipe1 = 레시피_생성(member, 2L, now.minusDays(2L));
+                final var recipe2 = 레시피_생성(member, 2L, now.minusDays(1L));
+                final var recipe3 = 레시피_생성(member, 2L, now);
+                복수_꿀조합_저장(recipe1, recipe2, recipe3);
+
+                final var author = RecipeAuthorDto.toDto(member);
+                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author, false);
+                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author, false);
+                final var rankingRecipeDto3 = RankingRecipeDto.toDto(recipe3, Collections.emptyList(), author, false);
+                final var rankingRecipesDtos = List.of(rankingRecipeDto3, rankingRecipeDto2, rankingRecipeDto1);
+                final var expected = RankingRecipesResponse.toResponse(rankingRecipesDtos);
+
+                // when
+                final var actual = recipeService.getTop4Recipes(loginId);
+
+                // then
+                assertThat(actual).usingRecursiveComparison()
+                        .isEqualTo(expected);
+            }
+
+            @Test
+            void 전체_꿀조합_중_랭킹이_높은_상위_4개_꿀조합을_구할_수_있다() {
+                // given
+                final var loginId = -1L;
                 final var member = 멤버_멤버1_생성();
                 단일_멤버_저장(member);
 
@@ -636,15 +669,82 @@ class RecipeServiceTest extends ServiceTest {
                 복수_꿀조합_저장(recipe1, recipe2, recipe3, recipe4);
 
                 final var author = RecipeAuthorDto.toDto(member);
-                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author);
-                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author);
-                final var rankingRecipeDto3 = RankingRecipeDto.toDto(recipe3, Collections.emptyList(), author);
-                final var rankingRecipeDto4 = RankingRecipeDto.toDto(recipe4, Collections.emptyList(), author);
-                final var rankingRecipesDtos = List.of(rankingRecipeDto4, rankingRecipeDto3, rankingRecipeDto2);
+                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author, false);
+                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author, false);
+                final var rankingRecipeDto3 = RankingRecipeDto.toDto(recipe3, Collections.emptyList(), author, false);
+                final var rankingRecipeDto4 = RankingRecipeDto.toDto(recipe4, Collections.emptyList(), author, false);
+                final var rankingRecipesDtos = List.of(rankingRecipeDto4, rankingRecipeDto3, rankingRecipeDto2, rankingRecipeDto1);
                 final var expected = RankingRecipesResponse.toResponse(rankingRecipesDtos);
 
                 // when
-                final var actual = recipeService.getTop3Recipes();
+                final var actual = recipeService.getTop4Recipes(loginId);
+
+                // then
+                assertThat(actual).usingRecursiveComparison()
+                        .isEqualTo(expected);
+            }
+        }
+
+        @Nested
+        class 로그인_여부_응답_테스트 {
+
+            @Test
+            void 로그인_안한_경우_꿀조합의_좋아요는_false로_반환한다() {
+                // given
+                final var loginId = -1L;
+                final var member = 멤버_멤버1_생성();
+                단일_멤버_저장(member);
+
+                final var now = LocalDateTime.now();
+                final var recipe1 = 레시피_생성(member, 4L, now.minusDays(10L));
+                final var recipe2 = 레시피_생성(member, 6L, now.minusDays(10L));
+                final var recipe3 = 레시피_생성(member, 5L, now);
+                final var recipe4 = 레시피_생성(member, 6L, now);
+                복수_꿀조합_저장(recipe1, recipe2, recipe3, recipe4);
+
+                final var author = RecipeAuthorDto.toDto(member);
+                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author, false);
+                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author, false);
+                final var rankingRecipeDto3 = RankingRecipeDto.toDto(recipe3, Collections.emptyList(), author, false);
+                final var rankingRecipeDto4 = RankingRecipeDto.toDto(recipe4, Collections.emptyList(), author, false);
+                final var rankingRecipesDtos = List.of(rankingRecipeDto4, rankingRecipeDto3, rankingRecipeDto2, rankingRecipeDto1);
+                final var expected = RankingRecipesResponse.toResponse(rankingRecipesDtos);
+
+                // when
+                final var actual = recipeService.getTop4Recipes(loginId);
+
+                // then
+                assertThat(actual).usingRecursiveComparison()
+                        .isEqualTo(expected);
+            }
+
+            @Test
+            void 로그인_한_경우_꿀조합의_좋아요는_로그인_사용자의_좋아요_여부로_반환한다() {
+                // given
+                final var member = 멤버_멤버1_생성();
+                단일_멤버_저장(member);
+                final var loginId = member.getId();
+
+                final var now = LocalDateTime.now();
+                final var recipe1 = 레시피_생성(member, 4L, now.minusDays(10L));
+                final var recipe2 = 레시피_생성(member, 6L, now.minusDays(10L));
+                final var recipe3 = 레시피_생성(member, 5L, now);
+                final var recipe4 = 레시피_생성(member, 6L, now);
+                복수_꿀조합_저장(recipe1, recipe2, recipe3, recipe4);
+
+                final var recipeFavorite = 레시피_좋아요_생성(member, recipe1, true);
+                단일_꿀조합_좋아요_저장(recipeFavorite);
+
+                final var author = RecipeAuthorDto.toDto(member);
+                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author, true);
+                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author, false);
+                final var rankingRecipeDto3 = RankingRecipeDto.toDto(recipe3, Collections.emptyList(), author, false);
+                final var rankingRecipeDto4 = RankingRecipeDto.toDto(recipe4, Collections.emptyList(), author, false);
+                final var rankingRecipesDtos = List.of(rankingRecipeDto4, rankingRecipeDto3, rankingRecipeDto2, rankingRecipeDto1);
+                final var expected = RankingRecipesResponse.toResponse(rankingRecipesDtos);
+
+                // when
+                final var actual = recipeService.getTop4Recipes(loginId);
 
                 // then
                 assertThat(actual).usingRecursiveComparison()
@@ -658,6 +758,7 @@ class RecipeServiceTest extends ServiceTest {
             @Test
             void 꿀조합_좋아요_수가_같으면_최근_생성된_꿀조합의_랭킹을_더_높게_반환한다() {
                 // given
+                final var guestId = -1L;
                 final var member = 멤버_멤버1_생성();
                 단일_멤버_저장(member);
 
@@ -667,13 +768,13 @@ class RecipeServiceTest extends ServiceTest {
                 복수_꿀조합_저장(recipe1, recipe2);
 
                 final var author = RecipeAuthorDto.toDto(member);
-                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author);
-                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author);
+                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author, false);
+                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author, false);
                 final var rankingRecipesDtos = List.of(rankingRecipeDto2, rankingRecipeDto1);
                 final var expected = RankingRecipesResponse.toResponse(rankingRecipesDtos);
 
                 // when
-                final var actual = recipeService.getTop3Recipes();
+                final var actual = recipeService.getTop4Recipes(guestId);
 
                 // then
                 assertThat(actual).usingRecursiveComparison()
@@ -683,6 +784,7 @@ class RecipeServiceTest extends ServiceTest {
             @Test
             void 꿀조합_생성_일자가_같으면_좋아요_수가_많은_꿀조합의_랭킹을_더_높게_반환한다() {
                 // given
+                final var guestId = -1L;
                 final var member = 멤버_멤버1_생성();
                 단일_멤버_저장(member);
 
@@ -692,13 +794,13 @@ class RecipeServiceTest extends ServiceTest {
                 복수_꿀조합_저장(recipe1, recipe2);
 
                 final var author = RecipeAuthorDto.toDto(member);
-                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author);
-                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author);
+                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author, false);
+                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author, false);
                 final var rankingRecipesDtos = List.of(rankingRecipeDto2, rankingRecipeDto1);
                 final var expected = RankingRecipesResponse.toResponse(rankingRecipesDtos);
 
                 // when
-                final var actual = recipeService.getTop3Recipes();
+                final var actual = recipeService.getTop4Recipes(guestId);
 
                 // then
                 assertThat(actual).usingRecursiveComparison()
